# SentinelSSH

./: README.md  app.py  main.py  pyproject.toml
sentinelssh/: attack_events.py  cli.py  generate_report.py  get_data.py  parse_data.py
sentinelssh/commands/: formatter.py  scan_file.py  stats_file.py  top_ips.py  watch_file.py
src/: attack_events.py  cli.py  generate_report.py  get_data.py  parse_data.py
test/: result.json  result.txt
