[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelssh"
version = "0.1.0"
description = "SSH log threat analyzer"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinelssh*"]

[project.scripts]
sentinelssh = "sentinelssh.cli:main"
